fix(security): upgrade busybox to 1.37.0-r14 to fix CVE in tar
Addresses security vulnerability in BusyBox tar where TAR archives
can have filenames hidden from listing through terminal escape sequences.

Changes:
- bin/setup/alpine.sh: Add explicit busybox/busybox-binsh upgrade
- go/demo/flaky-service/Dockerfile: Add busybox upgrade before ca-certificates
- go/demo/flaky-service/Dockerfile.sidecar: Add busybox upgrade before dependencies
- dockerfiles/Dockerfile.softserve: Add busybox upgrade in both builder and server stages

Fix Version: 1.37.0-r14
Current Version: 1.37.0-r12
Affected Package: busybox-binsh

--- a/dockerfiles/Dockerfile.softserve
+++ b/dockerfiles/Dockerfile.softserve
@@ -12,7 +12,8 @@ EXPOSE 23233
 EXPOSE 9418
 
 # basics, in case need to access shell to debug/troubleshoot
-RUN apk update --no-cache
+# Upgrade busybox to fix CVE in tar (terminal escape sequence vulnerability)
+RUN apk update --no-cache && apk upgrade --no-cache busybox busybox-binsh
 RUN apk add sudo git vim curl
 
 # create keys
@@ -44,7 +45,8 @@ EXPOSE 23233
 EXPOSE 9418
 
 # needs git for repos to be accessible
-RUN apk update --no-cache
+# Upgrade busybox to fix CVE in tar (terminal escape sequence vulnerability)
+RUN apk update --no-cache && apk upgrade --no-cache busybox busybox-binsh
 RUN apk add git
 
 COPY --from=builder /usr/bin/soft /usr/bin/
